--- a/modules/platform/nuxeo-automation/nuxeo-automation-scripting/pom.xml
+++ b/modules/platform/nuxeo-automation/nuxeo-automation-scripting/pom.xml
@@ -70,6 +70,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-web-common</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.openjdk.nashorn</groupId>
+      <artifactId>nashorn-core</artifactId>
+    </dependency>
 
     <!-- Tests -->
     <dependency>
