--- a/pom.xml
+++ b/pom.xml
@@ -3079,6 +3079,11 @@
       </dependency>
 
       <dependency>
+        <groupId>org.openjdk.nashorn</groupId>
+        <artifactId>nashorn-core</artifactId>
+        <version>15.1</version>
+      </dependency>
+      <dependency>
         <groupId>javax.script</groupId>
         <artifactId>groovy-engine</artifactId>
         <version>1.0</version>
